test/compile-errors/far-return-bogus.crow
main nat^(_ string[])
	(() => x) foo
	()

foo void(_ far string())
	()
